--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1 ondblclick="mudarFrase()" id="frase">Olá Mundo!</h1>
+        <h1 ondblclick="mudarFrase()" 
+        id="frase"
+        class="h1_1"
+        >Olá Mundo!</h1>
     </body>
 </html>
