Snas 4 (yes now its snas not sans lol)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1 ondblclick="mudarFrase()" 
+        <h1 ondblclick="mudarFrase()"
+        onmouseover="trocarClasse()"
         id="frase"
         class="h1_1"
         >Olá Mundo!</h1>
