--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
     <head>
         <title>Javascript 01</title>
-        <script src="js/myscript.js"></script>
+        <script src="js/myscript.js" type="text/javascript"></script>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1 ondblclick="mudarFrase()"
-        onmouseover="trocarClasse()"
-        id="frase"
-        class="h1_1"
-        >Olá Mundo!</h1>
+        <h1 ondblclick="mudarFrase()" onmouseover="trocarClasse()" id="frase" class="h1_1">Olá Mundo!</h1>
+        <input id="novaFrase" type="text"><br>
+        <input id="botao" type="button"
+            value="Trocar Frase"
+            onclick="trocarTexto();"><br><br>
+        <a href="calculadora.html">Calculadora</a>
     </body>
 </html>
