--- a/calculadora.html
+++ b/calculadora.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href="css/style.css">
+        <script src="js/myscript.js" type="text/javascript"></script>
     </head>
     <body>
         <h1>Página da minha Calculadora</h1>
@@ -13,4 +13,4 @@
         <button onclick="multiplicar();">*</button>
         <button onclick="dividir();">/</button>
     </body>
-</html>
+    </html>
