ata era o V ali kkkkkkkk

--- a/calculadora.html
+++ b/calculadora.html
@@ -7,7 +7,7 @@
         <input type="number" placeholder="123" id="n1">
         <input type="number" placeholder="123" id="n2">
         =
-        <input type="number" readonly id="r"><br><br>
+        <input type="number" readonly id="resultado"><br><br>
         <button onclick="somar();">+</button>
         <button onclick="subtrair();">-</button>
         <button onclick="multiplicar();">*</button>
