--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
             value="Trocar Frase"
             onclick="trocarTexto();"><br><br>
         <a href="calculadora.html">Calculadora</a>
+        <a href="validar.html">Validação</a>
     </body>
 </html>
