--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
             onclick="trocarTexto();"><br><br>
         <a href="calculadora.html">Calculadora</a>
         <a href="validar.html">Validação</a>
+        <a href="validarV2.html">Validar 2</a>
     </body>
 </html>
